# axiom-core

./: ARCHITECTURE.md  CONSENSUS_CRITICAL.md  Cargo.toml  Dockerfile.zkvm  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  README.md  REQUIREMENTS.md  SECURITY.md  TESTS.md  THREAT_MODEL.md  VERIFYING.md  ZKVM_INTEGRATION.md  build-zkvm.sh  genesis-ceremony.toml
.cargo/: config.toml
artifacts/: CORE_ID.txt  axiom-core.elf
avm/: AVM_THREADED_DISPATCH_PLAN.md  Cargo.toml
avm-guest/: Cargo.toml  link.x
avm-guest/.cargo/: config.toml
avm-guest/src/: main.rs
avm/examples/: witness_profile.rs
avm/src/: config.rs  core_handle.rs  host_functions.rs  interpreter.rs  lib.rs
avm/src/dmap/: attestation.rs  challenge.rs  checkpoint.rs  integration_tests.rs  merkle.rs  mod.rs  verification.rs
avm/src/riscv/: decoder.rs  elf_loader.rs  executor.rs  fast_executor.rs  jit.rs  memory.rs  mod.rs
ipc/: Cargo.toml
ipc/src/: codec.rs  lib.rs
logic/: Cargo.toml  build.rs  protocol_core.toml
logic/examples/: compute_core_id.rs  g1_keygen.rs  g1_sign_fact.rs  generate_vectors.rs
logic/src/: ark.rs  audit.rs  canonical.rs  carrier.rs  cl5_inputs.rs  console.rs  crypto.rs  envelope.rs  error_response.rs  errors.rs  fact.rs  genesis.rs  genesis.rs.bak  genesis_integrity.rs  lib.rs  modes.rs  mvib.rs  nabla_genesis.rs  nabla_wire.rs  oods_verify.rs  oracle.rs  reality.rs  receipt.rs  send_proof_verify.rs  transport_crypto.rs  types.rs  validation.rs  vbc.rs  version.rs  wallet_id.rs  wallet_seq.rs  wire_client.rs
logic/tests/: adversarial_corpus.rs  differential_verification.rs  encrypt_envelope.rs  property_fuzz.proptest-regressions  property_fuzz.rs  signing_integration.rs  webclient_security_boundary.rs
scripts/: build-core-elf.sh
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: consensus_vectors.json  run_conformance.py
tools/conform/: Cargo.toml
tools/conform/src/: main.rs
zkvm-guest/: Cargo.toml  build.rs
zkvm-guest/curve25519-dalek-risc0/curve25519-dalek/: Cargo.toml
zkvm-guest/guest/: Cargo.toml
zkvm-guest/guest/src/: main.rs
zkvm-guest/src/: lib.rs
zkvm-host/: Cargo.toml
zkvm-host/src/: config.rs  lib.rs  prover.rs  subprocess_prover.rs  verifier.rs
zkvm-host/tests/: prove_checkpoint_roundtrip.rs
