[package]
name = "axiom-core-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
axiom-core-logic = { path = "../logic" }
blake3 = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
