[package]
name = "axiom-test-utils"
version = "2.4.0"
edition = "2021"
license = "GPL-3.0"
authors = ["AXIOM Project"]
description = "Test utilities for AXIOM - keypairs, signing, genesis wallets"

[dependencies]
# Core types
axiom-core-logic = { path = "../logic" }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding
hex = "0.4"

[dev-dependencies]
