[package]
name = "axiom-conform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AXIOM Conformance — Implementation conformance checker"

[dependencies]
axiom-core-logic = { path = "../../logic" }
axiom-dmap-vm = { path = "../../avm" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"

[[bin]]
name = "conform"
path = "src/main.rs"
