[package]
name = "axiom-zkvm-guest"
version = "2.0.0"
edition = "2021"
license = "GPL-3.0"

[workspace]

[dependencies]
# RISC Zero zkVM guest support (no std) - must match cargo-risczero version
# In risc0 3.x, guest features are default for no_std
# "getrandom" enables host-provided randomness for crypto signing (fips204/fips205)
risc0-zkvm = { version = "3.0", default-features = false, features = ["getrandom"] }

# AVM types (PublicInputs, PublicOutputs, etc.)
axiom-dmap-vm = { path = "../../avm", default-features = false }

# Core logic — ZKP checkpoint function runs inside guest
axiom-core-logic = { path = "../../logic", default-features = false }

# BLAKE3 for checkpoint hashes (zkp_nonce_hash, fact_commitment, auth_hash)
blake3 = { version = "1.5", default-features = false }

# Serialization for types
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# CBOR (no_std) — read PublicInputs/FactCargo as a self-describing frame, exactly
# like the DMAP guest (core/avm-guest/src/main.rs:78). risc0's word-serde is
# non-self-describing and drops `#[serde(skip_serializing_if)]` fields, which
# desyncs the guest's positional read from the host's write.
ciborium = { version = "0.2", default-features = false }

# Pin getrandom v0.3 to avoid API mismatch with risc0-zkvm-platform 2.2.2
# (getrandom 0.3.4 moved inner_u32/inner_u64 out of backends module)
getrandom = { version = "=0.3.2", default-features = false }

# RISC Zero precompile patches — accelerate crypto inside zkVM guest:
#
# 1. Ed25519 precompile: curve25519-dalek risc0 fork replaces ~500M RISC-V cycles
#    with a single syscall. Local copy with hex dep fixed to no_std.
#    crypto-bigint: risc0 fork required by curve25519-dalek risc0 backend.
#
# 2. Keccak/SHA3 precompile: tiny-keccak risc0 fork routes SHA3 operations through
#    RISC Zero's keccak circuit (stable since risc0 v3.0.1, no unstable flag needed).
[patch.crates-io]
curve25519-dalek = { path = "../curve25519-dalek-risc0/curve25519-dalek" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
# SHA256 precompile is available via risc0_zkvm::sha (built-in, no external crate needed)
# tiny-keccak precompile disabled: adds keccak circuit overhead (~60s) that exceeds
# the savings from accelerating the few SHA3 calls in CL3. Net negative for our workload.
# tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
